Migrer til Spring Boot 4.0.4
- Bump spring-boot-starter-parent 3.5.10 → 4.0.4
- Omdøp startere: web → webmvc, aop → aspectj
- logstash-logback-encoder 8.1 → 9.0
- Erstatt spring-retry med native Spring `@Retryable` / `@EnableResilientMethods`
  - juster litt på retry-specs så de er like og forholdsvis saklige
- Fix WebClient: ExchangeStrategies → .codecs()
- Camel MDC: camel.main.use-mdc-logging → camel.mdc.enabled + camel-mdc modul
- Erstatt spring-cloud-contract-wiremock med wiremock-spring-boot 4.2.1
- Fix test-properties: wiremock.server.port → wiremock.server.baseUrl
- Fiks wiremock shaded imports → commons-io
- Legg til spring-boot-properties-migrator (midlertidig)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>